# ImGui_TextEditor

./: README.md
Source/: CMakeLists.txt  main.cpp
Source/Headers/: ImGui_FileDialog.hpp  TxApp.hpp  TxGuiApp.hpp  imgui.h
Source/ImGui/: CMakeLists.txt  CMakeLists.txt.org  ImGui_FileDialog.cpp  ImGui_FileManager.cpp  ImGui_FileManager.hpp  ImGui_TextEditor.cpp  TxApp.cpp  TxGuiApp.cpp  imgui.cpp  imgui_stdlib.cpp  imgui_widgets.cpp
Source/ImGui/ImGui_Imple/: imgui_impl_sdl3.cpp  imgui_menu.cpp
